update for 2023 - add description

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Nipuna
 last_name: WEERASEKARA
 email: w.nipuna@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  I am Nipuna Weerasekara, a web developer turned security researcher. I have published and presented on the research areas of software vulnerability remediation, web application security and vulnerability remediation in open-source. Currently, I am a full-time researcher at SCoRe Lab. Find me @Niweera on socials.
+  I am Nipuna Weerasekara, a web developer turned security and privacy researcher. I have published and presented on the research areas of software vulnerability remediation, web application security and vulnerability remediation in open-source. Currently, I am a PhD student at IMDEA Networks Institute in Madrid, Spain. Find me @Niweera on socials.
 footer_text: >
 
 
